--- a/gb/19/12/23/n11739587.md
+++ b/gb/19/12/23/n11739587.md
@@ -1,55 +1,56 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/synhl2788/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/synhl2788/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
+<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dueiwa2503/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dueiwa2503/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>内涵精深 公司总裁赞神韵将宝贵文化带给观众</h2>
 <img src="http://i.epochtimes.com/assets/uploads/2019/12/1912221913392639-600x400.jpg" />
 <h6>公司老板Roger Loria在帕切斯学院表演艺术中心观看了美国神韵国际艺术团的第四场演出。（新唐人电视台）
 </h6>
 <hr>
-	<p>【大纪元2019年12月23日讯】（大纪元美国帕切斯记者站报导）美国<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>艺术团自从2006年成立以来，规模在不断壮大，如今已经发展成拥有七个同等大小的艺术团的大型艺术公司。观众们的热情和期望更是与日俱增，一位在今天看过演出的纽约观众说：“我希望神韵从7个团发展成70个团！”</p>
-<p>Roger Loria在纽约上州经营一家零售企业，2019年12月22日下午，他在帕切斯学院表演艺术中心观看了美国<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>国际艺术团的第四场演出后，对神韵的<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md">音乐</a>、舞蹈和故事大加赞美，他想对神韵艺术家们说：“做得漂亮！加油！”</p>
-<p>神韵的演出除了优美动人的中国古典舞、史诗电影般的动态天幕和夺人眼球的鲜艳服装之外，还有一个物超所值的独家绝活，那就是现场伴奏的乐团，而且是中西合璧的独特<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md">音乐</a>，给Loria带来非凡的听觉享受。</p>
-<p>“哦，我很享受，我说的是整体的，从每一个层次的乐谱到每一个层次的演奏，以及和舞蹈的配合，完美！”</p>
-<p>当然还有舞蹈，“你就看那<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E7%BC%96%E8%88%9E.md">编舞</a>的方式，那个美，而且，他们从中国古代一直演到现代社会。”</p>
-<p>Loria说，音乐和舞蹈的美妙结合呈现出了令人感动的制作，体现了中国文化的博大精深，以及在现在的共产党统治下，这些传统文化遭到的令人痛心的破坏。</p>
-<p>“关于修炼人反迫害的故事感人至深。”他说，“演出中展现的价值观，根植于中国几千年的文化，好不容易传承到现在，中共政府却在破坏她，他们想破坏人们5000年继承下来的文化，多悲哀，他们不知道世界上有多少人愿意看到这些文化。”</p>
-<p>他祝贺神韵艺术家们成功地把这些宝贵的文化带给观众。“我可以看到神韵在世界各地都获得成功，就应该是这样的，所以我盼望神韵能最终在中国大陆演出！”</p>
-<p>Loria想对神韵艺术家们说：“太伟大了！演的好！加油！最好神韵能从7个团发展成70个团！太棒了！祝贺你们！”</p>
+	<p>【大纪元2019年12月23日讯】（大纪元美国帕切斯记者站报导）美国<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>艺术团自从2006年成立以来，规模在不断壮大，如今已经发展成拥有七个同等大小艺术团的大型艺术公司。一位在今天看过演出的纽约观众说：“我希望神韵从7个团发展成70个团！”</p>
+<p>Roger Loria在纽约上州经营一家零售企业，2019年12月22日下午，他在帕切斯学院表演艺术中心观看了美国<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>国际艺术团的第四场演出后，对神韵的<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md">音乐</a>、舞蹈和故事大加赞美，他想对神韵艺术家说：“做得漂亮！加油！”</p>
+<p>神韵的演出除了优美动人的中国古典舞、动态天幕和吸引眼球的鲜艳服装之外，还有中西合璧现场伴奏的乐团，给Loria带来非凡的听觉享受。</p>
+<p>“哦，我很陶醉，我说的是整体的，从每一个层次的乐谱到每一个层次的演奏，以及和舞蹈的配合，完美！”提到舞蹈，他说：说“你就看那<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%BC%96%E8%88%9E.md">编舞</a>的方式，那个美，而且，他们从中国古代一直演到现代社会。”</p>
+<p>Loria说，<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md">音乐</a>和舞蹈的美妙结合呈现出了令人感动的制作，体现了中国文化的博大精深，以及在现在的共产党统治下，这些传统文化遭到的令人痛心的破坏。</p>
+<p>“关于修炼人反迫害的故事感人至深。”他说，“演出中展现的价值观，根植于中国几千年的文化，好不容易传承到现在，中共政府却在破坏她，他们想破坏人们五千年继承下来的文化，多悲哀，他们不知道世界上有多少人愿意看到这些文化。”</p>
+<p>他祝贺神韵艺术家成功地把这些宝贵的文化带给观众。“我可以看到神韵在世界各地都获得成功，就应该是这样的，所以我盼望神韵能最终在中国大陆演出！”</p>
+<p>Loria想对神韵艺术家说：“太伟大了！演得好！加油！最好神韵能从7个团发展成70个团！太棒了！祝贺你们！”</p>
 <p>虽然Loria在演出前看了一些关于神韵节目的介绍，但是演出还是给他带来了巨大的冲击力，他说可能在未来的一段时间内要好好消化他在演出中汲取的文化知识。</p>
-<p>最后，Loria表示，“演出中如此深刻的内涵，一直萦绕在我的脑中，她的音乐、<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E7%BC%96%E8%88%9E.md">编舞</a>以及这场大制作，太精彩了，这真是一个令人难忘的经历。”</p>
+<p>最后，Loria表示，“演出中如此深刻的内涵，一直萦绕在我的脑中，她的音乐、<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%BC%96%E8%88%9E.md">编舞</a>以及这场大制作，太精彩了，这真是一个令人难忘的经历。”</p>
 <p>责任编辑：施萍</p>
 	
 <hr>
 
 #### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/19/12/23/n11739587.htm"></a>
+> 原文：<a href="http://www.epochtimes.com/gb\19\12\23\n11739587.htm">内涵精深 公司总裁赞神韵将宝贵文化带给观众</a>
 
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/11/9/n11643760.htm">蔡英文挺云林辅选刘建国 “云林赢，台湾就赢”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11630750.htm">蔡英文、刘建国莿桐大埤竞选总部成立 千人力挺</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/27/n11614313.htm">蔡英文、刘建国西螺及古坑竞选总部成立</a></li>
+> <li><a href="http://www.epochtimes.com/gb/18/3/29/n10259513.htm">新生儿心脏拇指大 马偕儿医开心救命</a></li>
+> <li><a href="http://www.epochtimes.com/gb/16/12/14/n8589558.htm">心导管关闭术 早产儿肺出血治疗新纪元</a></li>
+> <li><a href="http://www.epochtimes.com/gb/15/8/20/n4508898.htm">先天性心脏病 台31周早产儿两度开刀保命</a></li>
+> <li><a href="http://www.epochtimes.com/gb/13/1/15/n3777558.htm">开放性动脉导管结扎 双婴重获“心”生</a></li>
+> <li><a href="http://www.epochtimes.com/gb/13/1/15/n3777255.htm">开放性动脉导管  医吁及早治疗</a></li>
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738151.htm">朝鲜或再射导弹 美防长：美军今晚就可开战</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733786.htm">【内幕】小马奔腾翻车 车峰吞噬数字王国</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738313.htm">中俄否决UN援助叙利亚决议 蓬佩奥斥可耻</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11737975.htm">【翻墙必看】外媒：中共推引渡条例的幕后故事</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11716248.htm">孙运璿的未竟之路</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741624.htm">【翻墙必看】北大教授：七常委先公示财产</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741848.htm">网传赖小民将百名情妇安置同一小区</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11742305.htm">网文：央行钱印出来了 借钱的人没了</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741515.htm">英缉获大量中国假货 含巴宝莉和香奈儿品牌</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11719120.htm">暗室欺心不知神目如电 他们转生牲畜为还债</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736488.htm">客机降香港遭拒 传中共军机拦截要求远离澳门</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737119.htm">大陆为何出现江湖“底朝天” 专家揭秘（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737305.htm">马云卸任后 在湖北获“新职”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/17/n11661844.htm">【思想领袖】哪些因素威胁美国文化与繁荣（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733260.htm">【新闻看点】人人留影 中共监控网世界独有</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735913.htm">【新闻看点】经济4大难题 李克强再喊压力大</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11724979.htm">“一元复始”古人为何贺冬至不贺夏至？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11729266.htm">2020年 这18个自由职业年薪过10万</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740044.htm">美军罕见公开生擒朝鲜领导人的演习画面</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743457.htm">【新闻看点】曾吁中共下台 北大教授再喊话</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743683.htm">【热点互动】美国防法案 暗制中共 明挺台湾</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739348.htm">【拍案惊奇】《愿荣光归香港》全新台语歌词</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738702.htm">哈孝远补办婚宴热闹 迎娶空姐美娇娘</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735699.htm">网爆汪峰朋友圈发文截图 宣布章子怡平安产子</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735902.htm">李宇春出道14年 两次被父亲要求退出娱乐圈</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736552.htm">国王企鹅住在日本家庭里 会自己到市场买鱼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735513.htm">IU 击退朴敏英《德鲁纳酒店》登年度韩剧之冠</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11739135.htm">高圆圆冬至晒照问吃啥 贾静雯晒满桌美食回应</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739406.htm">岚摘公信榜年销量冠军 TWICE与BTS入Top5</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740019.htm">崔智友对怀孕心怀感恩 明年5月为人母</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738990.htm">指如今演艺工作式微 周润发有意退休后转行</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/19/12/23/n11739587.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/synhl2788/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/19/12/23/n11739587.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
