--- a/gb/19/10/26/n11613578.md
+++ b/gb/19/10/26/n11613578.md
@@ -1,48 +1,55 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rdngdq252/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rdngdq252/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rdngdq252/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rdngdq252/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rdngdq252/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rdngdq252/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rdngdq252/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rdngdq252/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rdngdq252/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rdngdq252/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rdngdq252/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rdngdq252/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rdngdq252/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rdngdq252/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rdngdq252/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rdngdq252/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rdngdq252/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rdngdq252/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf5773.md#1">贪腐淫乱 | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/rdngdq252/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rdngdq252/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
+<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dueiwa2503/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dueiwa2503/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>“与宇宙相连”指挥家赞神韵交响乐宏大无比</h2>
 <img src="http://i.epochtimes.com/assets/uploads/2019/10/1910260019292153-600x400.jpg" />
 <h6>指挥家Arthur Comegno与友人Kathleen（护士）于10月25日晚，在波士顿交响乐厅，聆听了神韵交响乐团的音乐演奏会。（甄秀欣／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年10月26日讯】（大纪元记者甄秀欣美国波士顿报导）“<a href="https://github.com/rdngdq252/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E4%BA%A4%E5%93%8D%E4%B9%90%E5%9B%A2.md">神韵交响乐团</a>宏大无比。”指挥家Arthur Comegno盛赞神韵交响乐团的音乐“神奇美妙”，他表示自己也想加入其中，共享音乐中的<a href="https://github.com/rdngdq252/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7%E5%86%85%E6%B6%B5.md">神性内涵</a>。</p>
-<p><a href="https://github.com/rdngdq252/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E4%BA%A4%E5%93%8D%E4%B9%90%E5%9B%A2.md">神韵交响乐团</a>于10月25日晚，在<a href="https://github.com/rdngdq252/djy/blob/master/gb/tag/%E6%B3%A2%E5%A3%AB%E9%A1%BF%E4%BA%A4%E5%93%8D%E4%B9%90%E5%8E%85.md">波士顿交响乐厅</a>（Boston Symphony Hall）拉开了当地演出的序幕。指挥家Arthur Comegno与友人Kathleen当晚观看后非常的兴奋，他们在惊叹之余频频赞叹，Comegno说：“我觉得感受到内心的震撼，这是发自内心深处的感动。”</p>
+	<p>【大纪元2019年10月26日讯】（大纪元记者甄秀欣美国波士顿报导）“<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E4%BA%A4%E5%93%8D%E4%B9%90%E5%9B%A2.md">神韵交响乐团</a>宏大无比。”指挥家Arthur Comegno盛赞神韵交响乐团的音乐“神奇美妙”，他表示自己也想加入其中，共享音乐中的<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7%E5%86%85%E6%B6%B5.md">神性内涵</a>。</p>
+<p><a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E4%BA%A4%E5%93%8D%E4%B9%90%E5%9B%A2.md">神韵交响乐团</a>于10月25日晚，在<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E6%B3%A2%E5%A3%AB%E9%A1%BF%E4%BA%A4%E5%93%8D%E4%B9%90%E5%8E%85.md">波士顿交响乐厅</a>（Boston Symphony Hall）拉开了当地演出的序幕。指挥家Arthur Comegno与友人Kathleen当晚观看后非常的兴奋，他们在惊叹之余频频赞叹，Comegno说：“我觉得感受到内心的震撼，这是发自内心深处的感动。”</p>
 <p>他感到神韵音乐具有神圣的启迪与宇宙相关，他认为，“音乐是有共性的”，在听到某些乐句时，Comegno有着独特的体验，“他们好像飞到了云端、飞向了神。特别是用弦乐器的比萨卡托（pizzicato，用指弹的拨奏曲），好似在战车上俯视战马，冲向天空。”他说，“有很多的爱和情感，我试图描绘——将每个曲目中的每个段落整合起来，太优美了！”</p>
 <p>“我看到了神韵音乐与宇宙的相连，表现了爱、神性所有这些事情，我看到他们之间的连接。”他认为神韵交响乐团诠释了“一个非常好的理念”，“我希望回来再听一遍。”</p>
 <p>Comegno有着丰富的指挥经验，指挥过许多大型音乐会，同时，他还做过专业小提琴手，培训过许多音乐人；他也是一名演员、导演，毕业于伊士曼音乐学院和哈佛大学。他从神韵音乐中看到了“西方音乐与亚洲音乐、中国音乐的结合”。他表示，“我也曾学过中国琴。我知道一些关于中国音乐的东西。”</p>
-<p>他认为神韵交响乐团东西方合璧让整场音乐会中的乐声更加“美妙动听”，他觉得神韵“非常宏大”。“作为一个<a href="https://github.com/rdngdq252/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90%E5%AE%B6.md">音乐家</a>，我非常密切地看着交响乐团，数着七个低音演奏家、十个大提琴、十四个第一小提琴、十四个二级小提琴、中提琴，有趣的是，指挥有一个中提琴谱架，第一中提琴手的谱架。” Comegno娓娓道来。</p>
+<p>他认为神韵交响乐团东西方合璧让整场音乐会中的乐声更加“美妙动听”，他觉得神韵“非常宏大”。“作为一个<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90%E5%AE%B6.md">音乐家</a>，我非常密切地看着交响乐团，数着七个低音演奏家、十个大提琴、十四个第一小提琴、十四个二级小提琴、中提琴，有趣的是，指挥有一个中提琴谱架，第一中提琴手的谱架。” Comegno娓娓道来。</p>
 <p>“打击乐做了所有这些奇妙的事情，还有特殊的中国乐器。”他说，“我能说的最好的事情是：这是一场精彩的音乐会，我很惊讶和不知所措，所以我很高兴我来了。”</p>
 <p>他赞叹神韵演奏家的技艺非凡，“哦，他们太棒了！我真的很喜欢他们。”</p>
 <p>Kathleen也赞佩道：“神性贯穿在整个交响乐团，你能感觉到她。她美丽，令人沉思、反省，以及充满了能量活力。这是探索中国文化的另一部分。所以我很高兴我们今晚来了。”</p>
 <p>责任编辑：夏晶</p>
+	
 <hr>
 
 #### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/19/10/26/n11613578.htm"></a>
+> 原文：<a href="http://www.epochtimes.com/gb\19\10\26\n11613578.htm">“与宇宙相连”指挥家赞神韵交响乐宏大无比</a>
+
+
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/10/16/n11592781.htm">9月外储暴跌 专家：资金加速撤离中国大陆</a></li>
+> <li><a href="http://www.epochtimes.com/gb/18/3/29/n10259513.htm">新生儿心脏拇指大 马偕儿医开心救命</a></li>
+> <li><a href="http://www.epochtimes.com/gb/16/12/14/n8589558.htm">心导管关闭术 早产儿肺出血治疗新纪元</a></li>
+> <li><a href="http://www.epochtimes.com/gb/15/8/20/n4508898.htm">先天性心脏病 台31周早产儿两度开刀保命</a></li>
+> <li><a href="http://www.epochtimes.com/gb/13/1/15/n3777558.htm">开放性动脉导管结扎 双婴重获“心”生</a></li>
+> <li><a href="http://www.epochtimes.com/gb/13/1/15/n3777255.htm">开放性动脉导管  医吁及早治疗</a></li>
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11611696.htm">中共外交部急删撑林郑言论 林郑不妙？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11610860.htm">【翻墙必看】分析：四中全会的看点</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612333.htm">九死一生 福建人讲述偷渡英国的经历</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612752.htm">中共突变调“鼓励”私企 中国经济多严峻？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/3/n11565683.htm">生平没读过佛经成了佛  名臣虞允文父亲的故事</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/14/n11588372.htm">得道成仙者令人惊叹的神通</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/18/n11596909.htm">【历史回眸】唯一被写入正史与民国课本的乞丐</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/17/n11594823.htm">【才子佳人】一生一世一双人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/23/n11607703.htm">古天乐49岁生日 捐建第115所小学落成</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/23/n11607896.htm">赵丽颖自曝产后喜欢做家务 享受装饰家的快乐</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11610035.htm">唐嫣怀孕后学做好妈妈 在家自制蔓越莓松饼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/23/n11607435.htm">获美国建筑奖引争议 大陆女星江一燕俏皮回应</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/23/n11606960.htm">Mina于日本演唱会惊喜登场 TWICE齐唱新歌</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/22/n11605474.htm">【新闻看点】香港年轻人写下遗书 感动世界</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/23/n11607690.htm">【新闻看点】中共封1/4外媒网 国际愕然</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11608251.htm">【拍案惊奇】撼动港台大陆 细说陈同佳大案</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11609247.htm">英国冷藏车内39具尸体都是中国公民</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11610239.htm">大连10岁女孩中7刀惨死 当局封杀消息</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11609987.htm">CNN报导39人惨死英伦 被中共截断</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741624.htm">【翻墙必看】北大教授：七常委先公示财产</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741848.htm">网传赖小民将百名情妇安置同一小区</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11742305.htm">网文：央行钱印出来了 借钱的人没了</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741515.htm">英缉获大量中国假货 含巴宝莉和香奈儿品牌</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11724979.htm">“一元复始”古人为何贺冬至不贺夏至？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11729266.htm">2020年 这18个自由职业年薪过10万</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740044.htm">美军罕见公开生擒朝鲜领导人的演习画面</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743457.htm">【新闻看点】曾吁中共下台 北大教授再喊话</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743683.htm">【热点互动】美国防法案 暗制中共 明挺台湾</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739348.htm">【拍案惊奇】《愿荣光归香港》全新台语歌词</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738702.htm">哈孝远补办婚宴热闹 迎娶空姐美娇娘</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11739135.htm">高圆圆冬至晒照问吃啥 贾静雯晒满桌美食回应</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739406.htm">岚摘公信榜年销量冠军 TWICE与BTS入Top5</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740019.htm">崔智友对怀孕心怀感恩 明年5月为人母</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738990.htm">指如今演艺工作式微 周润发有意退休后转行</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/rdngdq252/djy/blob/master/gb/19/10/26/n11613578.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rdngdq252/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rdngdq252/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rdngdq252/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rdngdq252/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rdngdq252/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/19/10/26/n11613578.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
