--- a/gb/19/12/22/n11738198.md
+++ b/gb/19/12/22/n11738198.md
@@ -1,53 +1,52 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/hxrfvz257/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxrfvz257/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxrfvz257/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
+<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dueiwa2503/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dueiwa2503/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>演出展示中国人权真相 酒业代理商钦佩神韵</h2>
 <img src="http://i.epochtimes.com/assets/uploads/2019/12/191221211917100088-600x400.jpg" />
-<h6>2019年12月21日下午，酒业代理商Davoe Price在北加州伯克利观看了神韵演出。（于丽丽／大纪元）
+<h6>2019年12月21日下午，酒业代理商Davoe Price在加州大学伯克利分校泽勒巴克馆观看了神韵演出。（于丽丽／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年12月22日讯】（大纪元记者于丽丽美国伯克利报导）“我钦佩<a href="https://github.com/hxrfvz257/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>演员们的勇气。”酒业代理商、葡萄酒咨询师Davoe Price在观看了21日下午神韵环球艺术团在<a href="https://github.com/hxrfvz257/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E5%A4%A7%E5%AD%A6%E4%BC%AF%E5%85%8B%E5%88%A9%E5%88%86%E6%A0%A1%E6%B3%BD%E5%8B%92%E5%B7%B4%E5%85%8B%E9%A6%86.md">加州大学伯克利分校泽勒巴克馆</a>（Berkeley Zellerbach Hall）的第二场演出后，赞叹地说。</p>
-<p>她表示，从<a href="https://github.com/hxrfvz257/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>演出中学到了一些东西，“这部作品给我留下了深刻的印象，神韵讲述了那里曾经发生的和正在发生的故事，即使该节目不是在中国制作的。”</p>
-<p>“演出美极了！我很喜欢那个雄壮有力的蒙古舞。”Price还对演出开始时神佛下世的景像印象深刻，“这是一场充满<a href="https://github.com/hxrfvz257/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7.md">神性</a>的演出，神佛的形象让我受到很大震撼，场景壮观而美好。”</p>
-<p>Price觉得神韵演员出色地完成了复兴传统文化的使命，“把这么多不同的历史时期精彩地展现在舞台上，神韵太了不起了，我觉得自己既学到了知识又受到了启迪。”</p>
-<p>她接着说，“我知道<a href="https://github.com/hxrfvz257/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md">信仰</a>在中国仍然受到迫害，我觉得在中国正在发生（的迫害）是一种耻辱。神韵演员能勇敢地在舞台上展现这个事实，太令人钦佩了。”</p>
-<p>Price认为，加州伯克利大学是一个对各种宗教思想兼容并蓄的地方。她说：“神韵演出唤醒人们，去同情和支持那些因为宗教<a href="https://github.com/hxrfvz257/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md">信仰</a>而遭受迫害的人们。这是一场既美好，又有深刻教育意义的演出。”</p>
+	<p>【大纪元2019年12月22日讯】（大纪元记者于丽丽美国伯克利报导）“我钦佩<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>演员的勇气。”酒业代理商、葡萄酒咨询师Davoe Price观看过神韵环球艺术团12月21日下午在<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E5%A4%A7%E5%AD%A6%E4%BC%AF%E5%85%8B%E5%88%A9%E5%88%86%E6%A0%A1%E6%B3%BD%E5%8B%92%E5%B7%B4%E5%85%8B%E9%A6%86.md">加州大学伯克利分校泽勒巴克馆</a>（Berkeley Zellerbach Hall）的第二场演出后赞叹地说。</p>
+<p>她表示，她从<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>演出中有所学习，“这部作品给我留下了深刻的印象，神韵讲述了那里曾经发生的和正在发生的故事，即使该节目不是在中国制作的。”</p>
+<p>“演出美极了！我很喜欢那个雄壮有力的蒙古舞。”Price还对演出一开场时的神佛下世景象印象深刻，“这是一场充满<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7.md">神性</a>的演出，神佛的形象让我受到很大震撼，场景壮观而美好。”</p>
+<p>Price觉得神韵演员出色地完成了复兴传统文化的使命，“把这么多不同的历史时期精彩地展现在舞台上，神韵太了不起了，让我学到知识又受到启迪。”</p>
+<p>她接着说，“我知道<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md">信仰</a>在中国仍然受到迫害，在中国正在发生（的迫害）是一种耻辱。神韵演员能勇敢地在舞台上展现这个事实，太令人钦佩了。”</p>
+<p>Price认为，加州伯克利大学是一个对各种宗教思想兼容并蓄的地方。她说：“神韵演出唤醒人们，去同情和支持那些因为宗教<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md">信仰</a>而遭受迫害的人们。这是一场既美好又有深刻教育意义的演出。”</p>
 <p>责任编辑：王曦</p>
 	
 <hr>
 
 #### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/19/12/22/n11738198.htm"></a>
+> 原文：<a href="http://www.epochtimes.com/gb\19\12\22\n11738198.htm">演出展示中国人权真相 酒业代理商钦佩神韵</a>
 
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735446.htm">副总统政见发表会 赖清德：助中国民主化</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735528.htm">九二共识是陷阱 赖清德：中共不放弃攻台</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735470.htm">提捍卫主权6项使命 赖清德：盼国民党共同合作</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735504.htm">张善政炮轰蔡政府 赖清德：心目中的暖男变愤青</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735393.htm">台副总统政见会 赖清德谈民主、和平、繁荣</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11728082.htm">韩称被猪八戒抹黑 赖清德：讲话要有根据</a></li>
+> <li><a href="http://www.epochtimes.com/gb/18/3/29/n10259513.htm">新生儿心脏拇指大 马偕儿医开心救命</a></li>
+> <li><a href="http://www.epochtimes.com/gb/16/12/14/n8589558.htm">心导管关闭术 早产儿肺出血治疗新纪元</a></li>
+> <li><a href="http://www.epochtimes.com/gb/15/8/20/n4508898.htm">先天性心脏病 台31周早产儿两度开刀保命</a></li>
+> <li><a href="http://www.epochtimes.com/gb/13/1/15/n3777558.htm">开放性动脉导管结扎 双婴重获“心”生</a></li>
+> <li><a href="http://www.epochtimes.com/gb/13/1/15/n3777255.htm">开放性动脉导管  医吁及早治疗</a></li>
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737119.htm">大陆为何出现江湖“底朝天” 专家揭秘（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736961.htm">蓬佩奥：中国人民正在抵制共产党</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737133.htm">大纪元声明：吁脸书更正对大纪元不实言论</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736799.htm">黑鹰坠落 美军研发新一代垂直起降战机</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11716248.htm">孙运璿的未竟之路</a></li>
-> <li><a href="http://www.epochtimes.com/gb/9/1/22/n2406277.htm">汉大臣报杀身之仇 为何等待千年？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11724979.htm">“一元复始”古人为何贺冬至不贺夏至？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741624.htm">【翻墙必看】北大教授：七常委先公示财产</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741848.htm">网传赖小民将百名情妇安置同一小区</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11742305.htm">网文：央行钱印出来了 借钱的人没了</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741515.htm">英缉获大量中国假货 含巴宝莉和香奈儿品牌</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735906.htm">北京强颁“限狗令” 大批爱犬被“安乐死”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11734831.htm">美媒：中共首艘自制航母是漂浮的纸老虎？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735617.htm">澳门移交20年晚会 林郑老公不拍掌 无声抗议？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11734006.htm">【拍案惊奇】抗争风悄然北上 香港星火被盯上</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737558.htm">【新闻看点】太空兵出世 美首创新兵种的背后</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733123.htm">【新闻看点】政治闹剧？罢免川普几无可能</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735699.htm">网爆汪峰朋友圈发文截图 宣布章子怡平安产子</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11732595.htm">《忠孝节义》最终回藏彩蛋 杨丽花将现身</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733412.htm">从公益零分到连续获奖 范冰冰洒泪：好久不见</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735902.htm">李宇春出道14年 两次被父亲要求退出娱乐圈</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733222.htm">首轮入围名单公布 陆片《哪吒》无缘奥斯卡</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11724979.htm">“一元复始”古人为何贺冬至不贺夏至？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11729266.htm">2020年 这18个自由职业年薪过10万</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740044.htm">美军罕见公开生擒朝鲜领导人的演习画面</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743457.htm">【新闻看点】曾吁中共下台 北大教授再喊话</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743683.htm">【热点互动】美国防法案 暗制中共 明挺台湾</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739348.htm">【拍案惊奇】《愿荣光归香港》全新台语歌词</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738702.htm">哈孝远补办婚宴热闹 迎娶空姐美娇娘</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11739135.htm">高圆圆冬至晒照问吃啥 贾静雯晒满桌美食回应</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739406.htm">岚摘公信榜年销量冠军 TWICE与BTS入Top5</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740019.htm">崔智友对怀孕心怀感恩 明年5月为人母</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738990.htm">指如今演艺工作式微 周润发有意退休后转行</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hxrfvz257/djy/blob/master/gb/19/12/22/n11738198.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxrfvz257/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxrfvz257/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/19/12/22/n11738198.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
