--- a/gb/19/12/23/n11739713.md
+++ b/gb/19/12/23/n11739713.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/synhl2788/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/synhl2788/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
+<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dueiwa2503/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dueiwa2503/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>视听震撼 心灵升华 加大教授深受神韵启迪</h2>
 <img src="http://i.epochtimes.com/assets/uploads/2019/12/191222213037100731-600x400.jpg" />
 <h6>2019年12月22日下午，加州大学伯克利分校教授Anna Bellezza，观赏了神韵环球艺术团在加州大学伯克利分校泽勒巴克馆的演出。（林家维／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年12月23日讯】（大纪元记者林家维美国伯克利报导）12月22日下午，<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>环球艺术团在<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%8A%A0%E5%B7%9E%E5%A4%A7%E5%AD%A6%E4%BC%AF%E5%85%8B%E5%88%A9%E5%88%86%E6%A0%A1%E6%B3%BD%E5%8B%92%E5%B7%B4%E5%85%8B%E9%A6%86.md">美国加州大学伯克利分校泽勒巴克馆</a>（Berkeley Zellerbach Hall）的第四场演出，令加州大学伯克利分校教授Anna Bellezza体验视听震撼，得到心灵升华，陶醉其中。</p>
-<p>Bellezza在加州大学伯克利分校任教于意大利研究与文学已有17年，她和家人观赏演出后表示，“这是一场视觉飨宴，非常赏心悦目，同时也增进对中国历史的了解，从上半场我就学到了很多东西。服饰绚丽缤纷，<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>演员才华横溢。我强烈推荐给任何想了解中国历史、中国舞蹈，以及传统音乐的人士。”</p>
-<p><a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>艺术团将神的舞动之美演绎得出神入化，<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>演员精湛的艺术展现力，让观众惊叹不已。Bellezza表示，“我绝对感受到舞蹈演员身心灵如此地合而为一，并且贯穿整个舞台，与观众引起共鸣。”</p>
-<p>Bellezza表示，她特别喜欢水袖舞，还有草原少年扬鞭策马的舞蹈。“然而，有关于兄弟俩的<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md">信仰</a>故事，深深地打动了我。我之前不知道这种信仰迫害的严重情况仍发生于当今的中国，这个节目的情感丰沛，内涵强大。”</p>
+	<p>【大纪元2019年12月23日讯】（大纪元记者林家维美国伯克利报导）12月22日下午，<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>环球艺术团在<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%8A%A0%E5%B7%9E%E5%A4%A7%E5%AD%A6%E4%BC%AF%E5%85%8B%E5%88%A9%E5%88%86%E6%A0%A1%E6%B3%BD%E5%8B%92%E5%B7%B4%E5%85%8B%E9%A6%86.md">美国加州大学伯克利分校泽勒巴克馆</a>（Berkeley Zellerbach Hall）的第四场演出，令加州大学伯克利分校教授Anna Bellezza体验视听震撼，得到心灵升华，陶醉其中。</p>
+<p>Bellezza在加州大学伯克利分校任教于意大利研究与文学已有17年，她和家人观赏演出后表示，“这是一场视觉飨宴，非常赏心悦目，同时也增进对中国历史的了解，从上半场我就学到了很多东西。服饰绚丽缤纷，<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>演员才华横溢。我强烈推荐给任何想了解中国历史、中国舞蹈，以及传统音乐的人士。”</p>
+<p><a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>艺术团将神的舞动之美演绎得出神入化，<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>演员精湛的艺术展现力，让观众惊叹不已。Bellezza表示，“我绝对感受到舞蹈演员身心灵如此地合而为一，并且贯穿整个舞台，与观众引起共鸣。”</p>
+<p>Bellezza表示，她特别喜欢水袖舞，还有草原少年扬鞭策马的舞蹈。“然而，有关于兄弟俩的<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md">信仰</a>故事，深深地打动了我。我之前不知道这种信仰迫害的严重情况仍发生于当今的中国，这个节目的情感丰沛，内涵强大。”</p>
 <p>神韵独特的原创音乐，以中西方乐器合璧的演奏方式，将东西方两种不同的音乐体系完美结合，衬托出传统中国音乐的优美旋律，让观众陶醉不已，Bellezza也是其中之一。“现场乐团的伴奏精彩美妙，我喜欢西方传统音乐与中国乐器的结合，神韵将其组合得真是非常好。”Bellezza赞美道。</p>
 <p>Bellezza表示，神韵带领观众畅游天国圣境，领略中华五千年传统文化精髓，“看演出带我去了许多地方。我的心随之漫游徜徉，如梦似幻，我仿佛到了其它的世界。”</p>
 <p>她接着说，“观赏节目时我感到放松，而且深受启迪，自己好似在一个个更加宁静安祥的世界中旅行。”</p>
@@ -18,46 +18,36 @@
 <hr>
 
 #### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/19/12/23/n11739713.htm"></a>
+> 原文：<a href="http://www.epochtimes.com/gb\19\12\23\n11739713.htm">视听震撼 心灵升华 加大教授深受神韵启迪</a>
 
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737031.htm">挺韩游行落幕 韩国瑜高歌再喊中华民国万岁</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735350.htm">韩国瑜曾进少观所？台联：将提更多事证</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11731557.htm">蔡英文：希望韩国瑜到中国喊“中华民国万岁”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11730696.htm">韩国瑜：来台旅客人次包含转机客 观光局反驳</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721226.htm">若张善政失言或不妥 韩国瑜：会修正</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/10/n11713691.htm">韩国瑜称被抹黄 蔡英文：证实韩粉所为</a></li>
+> <li><a href="http://www.epochtimes.com/gb/18/3/29/n10259513.htm">新生儿心脏拇指大 马偕儿医开心救命</a></li>
+> <li><a href="http://www.epochtimes.com/gb/16/12/14/n8589558.htm">心导管关闭术 早产儿肺出血治疗新纪元</a></li>
+> <li><a href="http://www.epochtimes.com/gb/15/8/20/n4508898.htm">先天性心脏病 台31周早产儿两度开刀保命</a></li>
+> <li><a href="http://www.epochtimes.com/gb/13/1/15/n3777558.htm">开放性动脉导管结扎 双婴重获“心”生</a></li>
+> <li><a href="http://www.epochtimes.com/gb/13/1/15/n3777255.htm">开放性动脉导管  医吁及早治疗</a></li>
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738151.htm">朝鲜或再射导弹 美防长：美军今晚就可开战</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733786.htm">【内幕】小马奔腾翻车 车峰吞噬数字王国</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738313.htm">中俄否决UN援助叙利亚决议 蓬佩奥斥可耻</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11737975.htm">【翻墙必看】外媒：中共推引渡条例的幕后故事</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11716248.htm">孙运璿的未竟之路</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741624.htm">【翻墙必看】北大教授：七常委先公示财产</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741848.htm">网传赖小民将百名情妇安置同一小区</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11742305.htm">网文：央行钱印出来了 借钱的人没了</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741515.htm">英缉获大量中国假货 含巴宝莉和香奈儿品牌</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11719120.htm">暗室欺心不知神目如电 他们转生牲畜为还债</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738026.htm">加国科学家创世界最小姜饼屋 小于头发宽度</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737714.htm">夜间频尿睡不好？有8大原因 医师教你摆脱</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/29/n11621011.htm">荣大夫的转骨方：帮孩子长高的古老秘密2</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/29/n11620993.htm">荣大夫的转骨方：帮孩子长高的古老秘密1</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733260.htm">【新闻看点】人人留影 中共监控网世界独有</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11734298.htm">【思想领袖】美前议长：中共是最大威胁</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736511.htm">【拍案惊奇】香港监狱外抗争 澳门监狱里庆祝</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736488.htm">客机降香港遭拒 传中共军机拦截要求远离澳门</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737119.htm">大陆为何出现江湖“底朝天” 专家揭秘（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737305.htm">马云卸任后 在湖北获“新职”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738702.htm">哈孝远补办婚宴热闹 迎娶空姐美娇娘</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735699.htm">网爆汪峰朋友圈发文截图 宣布章子怡平安产子</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735902.htm">李宇春出道14年 两次被父亲要求退出娱乐圈</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736552.htm">国王企鹅住在日本家庭里 会自己到市场买鱼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735513.htm">IU 击退朴敏英《德鲁纳酒店》登年度韩剧之冠</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11716248.htm">孙运璿的未竟之路</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11719120.htm">暗室欺心不知神目如电 他们转生牲畜为还债</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/12/16/n11724979.htm">“一元复始”古人为何贺冬至不贺夏至？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11729266.htm">2020年 这18个自由职业年薪过10万</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740044.htm">美军罕见公开生擒朝鲜领导人的演习画面</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743457.htm">【新闻看点】曾吁中共下台 北大教授再喊话</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743683.htm">【热点互动】美国防法案 暗制中共 明挺台湾</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739348.htm">【拍案惊奇】《愿荣光归香港》全新台语歌词</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738702.htm">哈孝远补办婚宴热闹 迎娶空姐美娇娘</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11739135.htm">高圆圆冬至晒照问吃啥 贾静雯晒满桌美食回应</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739406.htm">岚摘公信榜年销量冠军 TWICE与BTS入Top5</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740019.htm">崔智友对怀孕心怀感恩 明年5月为人母</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738990.htm">指如今演艺工作式微 周润发有意退休后转行</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/19/12/23/n11739713.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/synhl2788/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/19/12/23/n11739713.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
