--- a/gb/19/12/23/n11739726.md
+++ b/gb/19/12/23/n11739726.md
@@ -1,30 +1,30 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/synhl2788/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/synhl2788/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/12/191222214121100731-600x400.jpg" />
+<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dueiwa2503/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dueiwa2503/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>神韵唤醒世人良知 伯克利周日场一票难求</h2>
+<img src="http://i.epochtimes.com/assets/uploads/2019/12/1912231159071567-600x400.jpg" />
 <h6>2019年12月22日，神韵环球艺术团在美国加州大学伯克利分校泽勒巴克馆的第四场演出爆满，一票难求。（周容／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年12月23日讯】（大纪元美国伯克利记者站报导）12月22日，美国加州伯克利下起了淅沥的冬雨，令冬至的冷洌凭添几分寒意。然而，<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E5%A4%A7%E5%AD%A6%E4%BC%AF%E5%85%8B%E5%88%A9%E5%88%86%E6%A0%A1%E6%B3%BD%E5%8B%92%E5%B7%B4%E5%85%8B%E9%A6%86.md">加州大学伯克利分校泽勒巴克馆</a>（Berkeley Zellerbach Hall）却是暖意破表。</p>
-<p><a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>环球艺术团22日在此进行的演出，不仅延续前两天的爆满票房，更出现一票难求的盛况。过去三天来，神韵连续四场爆满的佳绩，已使每年度在圣诞假期掀起的北加州神韵热，再次于伯克利点燃。</p>
-<p>五千年中华神传文化的奇妙智慧，蕴育骚人墨客的神州山水，在大幕的拉起垂落中引领名流精英忘情地穿梭古今。活力四射的庶民生活，吟唱千古的经典史诗，高邈寥旷的宗师典范，一幕幕点亮了观众的心灵。观众看完后眉稍嘴角挂满笑意，感佩<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>“在唤醒人类”、“让心灵得到升华”、“振奋人心”。</p>
+	<p>【大纪元2019年12月23日讯】（大纪元美国伯克利记者站报导）12月22日，美国加州伯克利下起了淅沥的冬雨，令冬至的冷洌凭添几分寒意。然而，<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E5%A4%A7%E5%AD%A6%E4%BC%AF%E5%85%8B%E5%88%A9%E5%88%86%E6%A0%A1%E6%B3%BD%E5%8B%92%E5%B7%B4%E5%85%8B%E9%A6%86.md">加州大学伯克利分校泽勒巴克馆</a>（Berkeley Zellerbach Hall）却是暖意破表。</p>
+<p><a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>环球艺术团22日在此进行的演出，不仅延续前两天的爆满票房，更出现一票难求的盛况。过去三天来，神韵连续四场爆满的佳绩，已使每年度在圣诞假期掀起的北加州神韵热，再次于伯克利点燃。</p>
+<p>五千年中华神传文化的奇妙智慧，蕴育骚人墨客的神州山水，在大幕的拉起垂落中引领名流精英忘情地穿梭古今。活力四射的庶民生活，吟唱千古的经典史诗，高邈寥旷的宗师典范，一幕幕点亮了观众的心灵。观众看完后眉梢嘴角挂满笑意，感佩<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>“在唤醒人类”、“让心灵得到升华”、“振奋人心”。</p>
 <h2>国会议员参选人：神韵非常重要 影响深远</h2>
-<figure id="attachment_11740252" style="width: 450px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/12/191222220617100731.jpg"><img class="wp-image-11740252 size-medium" src="http://i.epochtimes.com/assets/uploads/2019/12/191222220617100731-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2019年12月22日，加州国会议员参选人、加州宪法党主席Don Grundmann观看了神韵环球艺术团在美国<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E5%A4%A7%E5%AD%A6%E4%BC%AF%E5%85%8B%E5%88%A9%E5%88%86%E6%A0%A1%E6%B3%BD%E5%8B%92%E5%B7%B4%E5%85%8B%E9%A6%86.md">加州大学伯克利分校泽勒巴克馆</a>的第四场演出。（于丽丽／大纪元）</figcaption></figure>
+<figure id="attachment_11740252" style="width: 450px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/12/191222220617100731.jpg"><img class="wp-image-11740252 size-medium" src="http://i.epochtimes.com/assets/uploads/2019/12/191222220617100731-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2019年12月22日，加州国会议员参选人、加州宪法党主席Don Grundmann观看了<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E7%8E%AF%E7%90%83%E8%89%BA%E6%9C%AF%E5%9B%A2.md">神韵环球艺术团</a>在美国<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E5%A4%A7%E5%AD%A6%E4%BC%AF%E5%85%8B%E5%88%A9%E5%88%86%E6%A0%A1%E6%B3%BD%E5%8B%92%E5%B7%B4%E5%85%8B%E9%A6%86.md">加州大学伯克利分校泽勒巴克馆</a>的第四场演出。（于丽丽／大纪元）</figcaption></figure>
 <p>加州国会议员参选人、加州宪法党主席Don Grundmann深受震憾地表示，神韵展现的精神内涵非常重要，把这样的精神内涵传扬出去非常重要。</p>
-<p>“我相信法轮功所代表的才是正统的中国文化。”他说，“我相信中共正在扼杀中国真正的传统文化。所以神韵是非常重要的，我们需要<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md">中国传统文化</a>去取代中共专制暴虐的（党）文化。这不仅对中国，而且对全人类来讲，都是万分重要的。”</p>
+<p>“我相信法轮功所代表的才是正统的中国文化。”他说，“我相信中共正在扼杀中国真正的传统文化。所以神韵是非常重要的，我们需要<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md">中国传统文化</a>去取代中共专制暴虐的（党）文化。这不仅对中国，而且对全人类来讲，都是万分重要的。”</p>
 <p>Grundmann说：“神韵非常重要，影响深远，神韵唤醒人们去面对正在发生的事，神韵用文化的形式唤醒人们。人们不会再沉迷装睡了，他们会醒过来，看到现实所发生的事。”</p>
 <h2>伯克利大学教授深受启迪</h2>
-<figure id="attachment_11739716" style="width: 450px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/12/191222213037100731.jpg"><img class="wp-image-11739716 size-medium" src="http://i.epochtimes.com/assets/uploads/2019/12/191222213037100731-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2019年12月22日下午，加州大学伯克利分校教授Anna Bellezza观赏神韵环球艺术团在加州大学伯克利分校泽勒巴克馆的演出。（林家维／大纪元）</figcaption></figure>
-<p>加州大学伯克利分校教授Anna Bellezza表示，神韵带领观众畅游天国圣境，领略中华五千年传统文化精髓，“演出带我去了许多地方。我的心随之漫游徜徉，如梦似幻，我仿佛到了其他的世界。”</p>
-<p>她说，“观赏节目时我感到放松，而且深受启迪，自己好似在一个个更加宁静安祥的世界中旅行。”</p>
+<figure id="attachment_11739716" style="width: 450px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/12/191222213037100731.jpg"><img class="wp-image-11739716 size-medium" src="http://i.epochtimes.com/assets/uploads/2019/12/191222213037100731-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2019年12月22日下午，加州大学伯克利分校教授Anna Bellezza观赏<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5%E7%8E%AF%E7%90%83%E8%89%BA%E6%9C%AF%E5%9B%A2.md">神韵环球艺术团</a>在加州大学伯克利分校泽勒巴克馆的演出。（林家维／大纪元）</figcaption></figure>
+<p>加州大学伯克利分校教授Anna Bellezza表示，神韵带领观众畅游天国圣境，领略中华五千年传统文化精髓，“演出带我去了许多地方。我的心随之漫游徜徉，如梦似幻，我仿佛到了其它的世界。”</p>
+<p>她说，“观赏节目时我感到放松，而且深受启迪，自己好似在一个个更加宁静安详的世界中旅行。”</p>
 <h2>经济学家：精彩至极 传递正面信息</h2>
 <figure id="attachment_11740001" style="width: 450px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/12/191222213045100731.jpg"><img class="wp-image-11740001 size-medium" title="神韵" src="http://i.epochtimes.com/assets/uploads/2019/12/191222213045100731-450x300.jpg" alt="神韵" width="450" b="300" /></a><figcaption class="wp-caption-text">加州房地产经纪人协会副首席经济学家Jordan Levine和太太Nadia Levine于2019年12月22日下午在美国加州大学伯克利分校泽勒巴克馆欣赏神韵演出。（张倩／大纪元）</figcaption></figure>
-<p>加州房地产经纪人协会副首席经济学家Jordan Levine先生赞美神韵：“演出精彩至极，美丽非凡，富有娱乐性。”“音乐、<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>都非常美妙，对我而言是全新的感受，赏心悦目。”</p>
+<p>加州房地产经纪人协会副首席经济学家Jordan Levine先生赞美神韵：“演出精彩至极，美丽非凡，富有娱乐性。”“音乐、<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>都非常美妙，对我而言是全新的感受，赏心悦目。”</p>
 <p>Levine说：“演出传递积极、正面的信息，服饰都非常美丽，令人惊叹的美，每个演员都非常美丽。”他说“每个人都应该来看，来欣赏。”</p>
 <h2>公司顾问喜获心灵提升</h2>
 <figure id="attachment_11739748" style="width: 450px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/12/191222221751100731.jpg"><img class="wp-image-11739748 size-medium" title="“提升人的心灵境界” 公司顾问赞神韵" src="http://i.epochtimes.com/assets/uploads/2019/12/191222221751100731-450x300.jpg" alt="“提升人的心灵境界” 公司顾问赞神韵" width="450" b="300" /></a><figcaption class="wp-caption-text">2019年12月22日下午，公司顾问Greg Maier在美国加州大学伯克利分校泽勒巴克馆观看神韵环球艺术团的第四场演出。（周容／大纪元）</figcaption></figure>
-<p>公司顾问Greg Maier赞叹神韵<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>与音乐鼓舞人心，“提升人的心灵境界。”</p>
+<p>公司顾问Greg Maier赞叹神韵<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>与音乐鼓舞人心，“提升人的心灵境界。”</p>
 <p>Maier说，神韵是非常引人入胜的演出，他一直想看，今天终于如愿以偿。“当你看到这么美妙的舞蹈，而且是真实的，真的鼓舞人心，神韵的节目也充满神性。”</p>
 <p>神韵环球艺术团接下来将于12月26日在圣荷西表演艺术中心进行4天5场演出。</p>
 <p><strong>神韵更多信息请见：</strong></p>
@@ -38,39 +38,34 @@
 <hr>
 
 #### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/19/12/23/n11739726.htm"></a>
+> 原文：<a href="http://www.epochtimes.com/gb\19\12\23\n11739726.htm">神韵唤醒世人良知 伯克利周日场一票难求</a>
 
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736522.htm">地产代理：堪培拉房市确已回弹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11736257.htm">拉斯维加斯地产最新现况分析</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11736205.htm">什么时候是买屋的最好时机？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11736113.htm">度假屋需求升高 在赌城如何购买第二住宅</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735481.htm">监委促改善居住正义 苏贞昌：改革非一蹴可及</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733062.htm">未来半数年轻人买不起房 加拿大正迈向租房时代</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/6/11/n11316049.htm">洛城游民缺厕所 加建要千万 官员也摇头</a></li>
+> <li><a href="http://www.epochtimes.com/gb/17/8/10/n9517847.htm">57万户租不起房 洛城游民明年或更多</a></li>
+> <li><a href="http://www.epochtimes.com/gb/7/10/11/n1863804.htm">民权团体与市府协议　洛城游民获准露宿街头</a></li>
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11716248.htm">孙运璿的未竟之路</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741624.htm">【翻墙必看】北大教授：七常委先公示财产</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741848.htm">网传赖小民将百名情妇安置同一小区</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11742305.htm">网文：央行钱印出来了 借钱的人没了</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741515.htm">英缉获大量中国假货 含巴宝莉和香奈儿品牌</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11719120.htm">暗室欺心不知神目如电 他们转生牲畜为还债</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/12/16/n11724979.htm">“一元复始”古人为何贺冬至不贺夏至？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733260.htm">【新闻看点】人人留影 中共监控网世界独有</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733624.htm">【罗厨寻味】避风塘炒龙虾</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11729266.htm">2020年 这18个自由职业年薪过10万</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740044.htm">美军罕见公开生擒朝鲜领导人的演习画面</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/11/17/n11661844.htm">【思想领袖】哪些因素威胁美国文化与繁荣（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736488.htm">客机降香港遭拒 传中共军机拦截要求远离澳门</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737119.htm">大陆为何出现江湖“底朝天” 专家揭秘（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737305.htm">马云卸任后 在湖北获“新职”</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739348.htm">【拍案惊奇】《愿荣光归香港》全新台语歌词</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738702.htm">哈孝远补办婚宴热闹 迎娶空姐美娇娘</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735699.htm">网爆汪峰朋友圈发文截图 宣布章子怡平安产子</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735902.htm">李宇春出道14年 两次被父亲要求退出娱乐圈</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736552.htm">国王企鹅住在日本家庭里 会自己到市场买鱼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735513.htm">IU 击退朴敏英《德鲁纳酒店》登年度韩剧之冠</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736552.htm">国王企鹅住在日本家庭里 会自己到市场买鱼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11686220.htm">全球的美味圣诞 各国圣诞大餐吃什么？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737714.htm">夜间频尿睡不好？有8大原因 医师教你摆脱</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11728197.htm">冬至养精蓄锐事半功倍  医师荐五种好药膳</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737569.htm">冬至你吃汤圆还是饺子？这样吃不怕热量高</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11739135.htm">高圆圆冬至晒照问吃啥 贾静雯晒满桌美食回应</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739406.htm">岚摘公信榜年销量冠军 TWICE与BTS入Top5</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740019.htm">崔智友对怀孕心怀感恩 明年5月为人母</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738990.htm">指如今演艺工作式微 周润发有意退休后转行</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/19/12/23/n11739726.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/synhl2788/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/19/12/23/n11739726.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
