--- a/gb/19/12/23/n11740619.md
+++ b/gb/19/12/23/n11740619.md
@@ -1,54 +1,56 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/synhl2788/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/synhl2788/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/synhl2788/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
+<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dueiwa2503/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dueiwa2503/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>“对人类影响深远”加州宪法党主席盛赞神韵</h2>
 <img src="http://i.epochtimes.com/assets/uploads/2019/12/191222220617100731-600x400.jpg" />
 <h6>2019年12月22日，加州国会议员竞选人、加州宪法党主席Don Grundmann观看了神韵环球艺术团在美国加州大学伯克利分校泽勒巴克馆的第四场演出。（于丽丽／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年12月23日讯】（大纪元记者于丽丽美国伯克利报导）加州宪法党主席，加州国会议员竞选人Don Grundmann先生，观看了<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>环球艺术团2019年12月22日下午在<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E4%BC%AF%E5%85%8B%E5%88%A9%E5%88%86%E6%A0%A1%E6%B3%BD%E5%8B%92%E5%B7%B4%E5%85%8B%E9%A6%86.md">加州伯克利分校泽勒巴克馆</a>（Berkeley Zellerbach Hall）的演出后，备受震撼，他认为，演出传递的精神内涵非常重要。</p>
-<p><a href="https://www.epochtimes.com/gb/tag/%e7%a5%9e%e9%9f%bb.md">神韵</a>艺术家以超高的中国古典舞技艺，演出以典雅脱俗，揭露了中共对坚守“真善忍”的修炼人长达20年的残酷迫害。Grundmann先生表示，对法轮功在中国遭到中共的残酷打压非常了解。他深信，法轮功所代表的修炼文化才是正统的中国文化。而中共则是在用专制去扼杀中国<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md">传统文化</a>。</p>
-<p>他说：“<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>和法轮功逐渐壮大代表的意义非凡，中国需要<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md">传统文化</a>回归，取代中共实施的专制文化。这不仅是针对中国，对整个人类都是万分重要。”</p>
+	<p>【大纪元2019年12月23日讯】（大纪元记者于丽丽美国伯克利报导）加州宪法党主席，加州国会议员竞选人Don Grundmann先生，观看了<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>环球艺术团2019年12月22日下午在<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E4%BC%AF%E5%85%8B%E5%88%A9%E5%88%86%E6%A0%A1%E6%B3%BD%E5%8B%92%E5%B7%B4%E5%85%8B%E9%A6%86.md">加州伯克利分校泽勒巴克馆</a>（Berkeley Zellerbach Hall）的演出后，备受震撼，他认为，演出传递的精神内涵非常重要。</p>
+<p><a href="https://www.epochtimes.com/gb/tag/%e7%a5%9e%e9%9f%bb.md">神韵</a>艺术家以超高的中国古典舞技艺，演出以典雅脱俗，揭露了中共对坚守“真善忍”的修炼人长达20年的残酷迫害。Grundmann先生表示，对法轮功在中国遭到中共的残酷打压非常了解。他深信，法轮功所代表的修炼文化才是正统的中国文化。而中共则是在用专制去扼杀中国<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md">传统文化</a>。</p>
+<p>他说：“<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>和法轮功逐渐壮大代表的意义非凡，中国需要<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md">传统文化</a>回归，取代中共实施的专制文化。这不仅是针对中国，对整个人类都是万分重要。”</p>
 <p>Grundmann先生认为，中共的专制手段正渗透到中国社会各层面。然而，中共专制体系压制的不仅是中国人，还试图强制压榨全世界。他呼吁，“全世界应该共同制止正在发生的迫害，不能让暴政得逞。”</p>
 <p>神韵艺术团从2006年创办以来，从一个团、二个团发展到现今的七个团，每年在世界巡回演出场场爆满。 Grundmann先生话语中充满赞赏，“我很高兴看到神韵能够蓬勃发展，可以让更多的人们欣赏，把（神韵）演出的精神内涵传扬出去，这点很重要。”</p>
-<p>观看神韵演出，让Grundmann先生看到了<a href="https://github.com/synhl2788/djy/blob/master/gb/tag/%E5%B8%8C%E6%9C%9B.md">希望</a>。他认为，神韵演出将影响深远，会唤醒人们的良知。 “法轮功的法理和中共专制形成鲜明对比，神韵用文化的形式唤醒人们，看清中共是如此暴虐和恶毒。”</p>
+<p>观看神韵演出，让Grundmann先生看到了<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E5%B8%8C%E6%9C%9B.md">希望</a>。他认为，神韵演出将影响深远，会唤醒人们的良知。 “法轮功的法理和中共专制形成鲜明对比，神韵用文化的形式唤醒人们，看清中共是如此暴虐和恶毒。”</p>
 <p>Grundmann先生呼吁，对于这场迫害，人们不要再沉迷装睡，在现实面前能渐渐清醒，不再袖手旁观。 “特别是美国的观众，会意识到在中国的兄弟及先辈们被打压，我们应该同心协力去拯救那里的人们脱离暴政。”</p>
 <p>责任编辑：曾晏均</p>
 	
 <hr>
 
 #### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/19/12/23/n11740619.htm"></a>
+> 原文：<a href="http://www.epochtimes.com/gb\19\12\23\n11740619.htm">“对人类影响深远”加州宪法党主席盛赞神韵</a>
 
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737031.htm">挺韩游行落幕 韩国瑜高歌再喊中华民国万岁</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11731557.htm">蔡英文：希望韩国瑜到中国喊“中华民国万岁”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11728209.htm">韩国瑜全国劳工后援会成立 工商大老力挺</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721226.htm">若张善政失言或不妥 韩国瑜：会修正</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11720542.htm">韩国瑜16万人最大社团消失 脸书：违反社群守则</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11715264.htm">韩国瑜中市竞总将成立 29日发动50万人造势</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11742106.htm">NORAD超级任务 追踪圣诞老人及朝鲜礼物</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741610.htm">警方指平安夜尖沙咀一带不封路 旅发局取消跨年烟花倒数</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741086.htm">圣诞节前一天 美各商家营业时间一览</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11686220.htm">全球的美味圣诞 各国圣诞大餐吃什么？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/1/7/n10958799.htm">【医案】平安夜的钟声</a></li>
+> <li><a href="http://www.epochtimes.com/gb/18/12/25/n10930987.htm">玉清心：今年唱《平安夜》为何格外动容</a></li>
+> <li><a href="http://www.epochtimes.com/gb/18/12/24/n10929031.htm">觅真：“平安夜”话平安</a></li>
+> <li><a href="http://www.epochtimes.com/gb/18/12/18/n10918471.htm">从老鼠到战壕 神奇的圣诞歌《平安夜》</a></li>
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738852.htm">圣诞卡求救信发酵 乐购暂停从中国进货</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11739021.htm">北京二手房价连跌6个月 现300万降幅</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11737975.htm">【翻墙必看】外媒：中共推引渡条例的幕后故事</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738880.htm">中国高校号召带留学生一对一回家过年 惹议</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11716248.htm">孙运璿的未竟之路</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741624.htm">【翻墙必看】北大教授：七常委先公示财产</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741848.htm">网传赖小民将百名情妇安置同一小区</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11742305.htm">网文：央行钱印出来了 借钱的人没了</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741515.htm">英缉获大量中国假货 含巴宝莉和香奈儿品牌</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11719120.htm">暗室欺心不知神目如电 他们转生牲畜为还债</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736488.htm">客机降香港遭拒 传中共军机拦截要求远离澳门</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737119.htm">大陆为何出现江湖“底朝天” 专家揭秘（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737305.htm">马云卸任后 在湖北获“新职”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733624.htm">【罗厨寻味】避风塘炒龙虾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736511.htm">【拍案惊奇】香港监狱外抗争 澳门监狱里庆祝</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11734298.htm">【思想领袖】美前议长：中共是最大威胁</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11724979.htm">“一元复始”古人为何贺冬至不贺夏至？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11729266.htm">2020年 这18个自由职业年薪过10万</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740044.htm">美军罕见公开生擒朝鲜领导人的演习画面</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/11/17/n11661844.htm">【思想领袖】哪些因素威胁美国文化与繁荣（上）</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739348.htm">【拍案惊奇】《愿荣光归香港》全新台语歌词</a></li>
 > <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738702.htm">哈孝远补办婚宴热闹 迎娶空姐美娇娘</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735699.htm">网爆汪峰朋友圈发文截图 宣布章子怡平安产子</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11736552.htm">国王企鹅住在日本家庭里 会自己到市场买鱼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735902.htm">李宇春出道14年 两次被父亲要求退出娱乐圈</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/20/n11735513.htm">IU 击退朴敏英《德鲁纳酒店》登年度韩剧之冠</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11739135.htm">高圆圆冬至晒照问吃啥 贾静雯晒满桌美食回应</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739406.htm">岚摘公信榜年销量冠军 TWICE与BTS入Top5</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740019.htm">崔智友对怀孕心怀感恩 明年5月为人母</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738990.htm">指如今演艺工作式微 周润发有意退休后转行</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/19/12/23/n11740619.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/synhl2788/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/19/12/23/n11740619.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
