--- a/gb/19/5/22/n11273861.md
+++ b/gb/19/5/22/n11273861.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5773.md#1">贪腐淫乱 | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/mprjd2205/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mprjd2205/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dueiwa2503/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dueiwa2503/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center></h2>
 <img src="http://i.epochtimes.com/assets/uploads/2019/05/190512142631100615-600x400.jpg" />
-<h6>5月12日下午，美国神韵纽约艺术团今年在巴黎国际会议中心的最后一场演出圆满结束，现场大爆满。（章乐／大纪元）
+<h6>2019年5月12日下午，美国神韵纽约艺术团今年在巴黎国际会议中心的最后一场演出圆满结束，现场大爆满。（章乐／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年05月23日讯】（大纪元记者麦蕾综合报导）上演百场，<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md">欧洲</a>奇观，美国神韵艺术团2019巡回演出再破欧洲纪录。</p>
-<p>英、法、德三个<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md">欧洲</a>大国喜迎神韵，其中英国上演32场，法国29场，德国22场，此外还有瑞士、奥地利、荷兰和丹麦。神韵风靡<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E4%BC%A6%E6%95%A6.md">伦敦</a>、<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E5%B7%B4%E9%BB%8E.md">巴黎</a>、<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E6%9F%8F%E6%9E%97.md">柏林</a>、日内瓦等历史名城，各地演出爆满加座，或取得满场的票房佳绩。</p>
-<figure style="width: 600px" class="wp-caption aligncenter"><img class="" src="http://i.epochtimes.com/assets/uploads/2019/05/40-20190501-London-YuanLuo-CurtainCallAndAudience-10-600x400.jpg" alt="" width="600" b="400" /><figcaption class="wp-caption-text">5月1日下午， 美国神韵纽约艺术团在英国<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E4%BC%A6%E6%95%A6.md">伦敦</a>Eventim Apollo剧院的第11场演出，再次全场爆满。（罗元／大纪元）</figcaption></figure>
-<figure style="width: 600px" class="wp-caption aligncenter"><img class="" src="http://i.epochtimes.com/assets/uploads/2019/05/190508203431100615-600x400.jpg" alt="" width="600" b="400" /><figcaption class="wp-caption-text">5月8日，美国纽约神韵艺术团在<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E5%B7%B4%E9%BB%8E.md">巴黎</a>国际会议中心（Palais des Congrès de Paris）的演出时，容纳近四千人的剧院出现爆满的盛况。（章乐／大纪元）</figcaption></figure>
-<figure style="width: 600px" class="wp-caption aligncenter"><img class="" src="http://i.epochtimes.com/assets/uploads/2019/03/190315211805976-600x400.jpg" alt="" width="600" b="400" /><figcaption class="wp-caption-text">2019年3月15日晚，美国神韵国际艺术团在德国首都<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E6%9F%8F%E6%9E%97.md">柏林</a>德意志歌剧院（Deutsche Oper Berlin）上演了今年首场演出，剧场里座无虚席。（吉森／大纪元）</figcaption></figure>
+	<p>【大纪元2019年05月23日讯】（大纪元记者麦蕾综合报导）上演百场，<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md">欧洲</a>奇观，美国神韵艺术团2019巡回演出再破欧洲纪录。</p>
+<p>英、法、德三个<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md">欧洲</a>大国喜迎神韵，其中英国上演32场，法国29场，德国22场，此外还有瑞士、奥地利、荷兰和丹麦。神韵风靡<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E4%BC%A6%E6%95%A6.md">伦敦</a>、<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E5%B7%B4%E9%BB%8E.md">巴黎</a>、<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E6%9F%8F%E6%9E%97.md">柏林</a>、日内瓦等历史名城，各地演出爆满加座，或取得满场的票房佳绩。</p>
+<figure style="width: 600px" class="wp-caption aligncenter"><img class="" src="http://i.epochtimes.com/assets/uploads/2019/05/40-20190501-London-YuanLuo-CurtainCallAndAudience-10-600x400.jpg" alt="" width="600" b="400" /><figcaption class="wp-caption-text">5月1日下午， 美国神韵纽约艺术团在英国<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E4%BC%A6%E6%95%A6.md">伦敦</a>Eventim Apollo剧院的第11场演出，再次全场爆满。（罗元／大纪元）</figcaption></figure>
+<figure style="width: 600px" class="wp-caption aligncenter"><img class="" src="http://i.epochtimes.com/assets/uploads/2019/05/190508203431100615-600x400.jpg" alt="" width="600" b="400" /><figcaption class="wp-caption-text">5月8日，美国纽约神韵艺术团在<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E5%B7%B4%E9%BB%8E.md">巴黎</a>国际会议中心（Palais des Congrès de Paris）的演出时，容纳近四千人的剧院出现爆满的盛况。（章乐／大纪元）</figcaption></figure>
+<figure style="width: 600px" class="wp-caption aligncenter"><img class="" src="http://i.epochtimes.com/assets/uploads/2019/03/190315211805976-600x400.jpg" alt="" width="600" b="400" /><figcaption class="wp-caption-text">2019年3月15日晚，美国神韵国际艺术团在德国首都<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E6%9F%8F%E6%9E%97.md">柏林</a>德意志歌剧院（Deutsche Oper Berlin）上演了今年首场演出，剧场里座无虚席。（吉森／大纪元）</figcaption></figure>
 <figure style="width: 600px" class="wp-caption aligncenter"><img class="" src="http://i.epochtimes.com/assets/uploads/2019/03/190326195251100101-600x400.jpg" alt="" width="600" b="400" /><figcaption class="wp-caption-text">2019年3月26日晚，美国神韵纽约艺术团在奥地利第二大城市格拉茨歌剧院的最后一场演出圆满结束，奥地利观众期待神韵明年再来。（吴青松／大纪元）</figcaption></figure>
 <p>圣洁庄严的天国美景，辉煌灿烂的盛世王朝，神韵通过纯正的中国古典舞，演绎着荡气回肠的历史传奇、修炼故事、千古爱情和世间神迹，其深刻的内涵让人感到醍醐灌顶，豁然开朗。神韵艺术家的高超技能、巨大付出和真诚善良，让观众惊叹感激。</p>
-<p>欧洲国家历史悠久，文化多元。在2019巡演中，欧洲的王公贵族、军方统帅、社交名人、传奇明星、商界巨头等各界名流齐聚剧院，争睹神韵。更有很多人跨国追看，成为奇观。各界人士用最真挚的语言来赞美神韵。法国著名医学教授Henri Joyeux称赞神韵将希望带给全世界：“这是一场真正的演出，抚慰心灵，增长智慧。”法国咨询公司总监Se?verine Poret说，“我感到，神真的已在人间了。”英国商业精英Michael Ardeleanu表示，“今晚我真的看见了神，还感受到，神也在我的体内。”</p>
+<p>欧洲国家历史悠久，文化多元。在2019巡演中，欧洲的王公贵族、军方统帅、社交名人、传奇明星、商界巨头等各界名流齐聚剧院，争睹神韵。更有很多人跨国追看，成为奇观。各界人士用最真挚的语言来赞美神韵。法国著名医学教授Henri Joyeux称赞神韵将希望带给全世界：“这是一场真正的演出，抚慰心灵，增长智慧。”法国咨询公司总监Séverine Poret说，“我感到，神真的已在人间了。”英国商业精英Michael Ardeleanu表示，“今晚我真的看见了神，还感受到，神也在我的体内。”</p>
 <h2>欧洲上流社会钦佩神韵 感悟返本归真</h2>
 <p>神韵名扬欧洲，从中产阶级白领到王公贵族、将军、国家级勋章得主等都欲一睹为快。神韵世界顶级的视听效果，内涵深刻的神传理念，在欧洲上流观众中引起轰动。</p>
 <figure style="width: 450px" class="wp-caption aligncenter"><img src="http://i.epochtimes.com/assets/uploads/2019/04/190423190654100615-600x400.jpg" alt="" width="450" b="300" /><figcaption class="wp-caption-text">4月23日晚，奥地利王子Hohenberg先生（左一）和家人一同在英国伦敦Eventim Apollo剧院观赏了神韵纽约艺术团在当地的首场演出。 （麦蕾／大纪元）</figcaption></figure>
@@ -113,41 +113,39 @@
 <hr>
 
 #### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/19/5/22/n11273861.htm"></a>
+> 原文：<a href="http://www.epochtimes.com/gb\19\5\22\n11273861.htm"></a>
 
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/8/19/n11462379.htm">蔡琴翻唱《告白气球》 周董：哎呦蔡姐不错哦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11391565.htm">昆凌时尚爱运动 成知名品牌最新全球代言人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/20/n11336607.htm">周董夫妇打篮球秀恩爱 昆凌运球跑位三投三中</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/15/n11260150.htm">昆凌坎城影展亮相 周杰伦扮粉丝围观</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/2/n11229766.htm">为拍戏常带儿女倒时差 昆凌：我是个自私的妈</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/11/n11038441.htm">现身周杰伦演唱会 章子怡晒与昆凌亲密合影</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/16/n10980015.htm">周杰伦晒妈妈时尚照 昆凌一句话见证婆媳感情</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/7/n10958529.htm">昆凌登时尚杂志封面 个性爱恶作剧</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/7/27/n10596149.htm">录节目向周董邀歌？李易峰：怕被拒绝很尴尬</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/3/13/n10215306.htm">昆凌分享周董贴心小举动 曝不让儿女露脸原因</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11742106.htm">NORAD超级任务 追踪圣诞老人及朝鲜礼物</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741610.htm">警方指平安夜尖沙咀一带不封路 旅发局取消跨年烟花倒数</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741086.htm">圣诞节前一天 美各商家营业时间一览</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11686220.htm">全球的美味圣诞 各国圣诞大餐吃什么？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/1/7/n10958799.htm">【医案】平安夜的钟声</a></li>
+> <li><a href="http://www.epochtimes.com/gb/18/12/25/n10930987.htm">玉清心：今年唱《平安夜》为何格外动容</a></li>
+> <li><a href="http://www.epochtimes.com/gb/18/12/24/n10929031.htm">觅真：“平安夜”话平安</a></li>
+> <li><a href="http://www.epochtimes.com/gb/18/12/18/n10918471.htm">从老鼠到战壕 神奇的圣诞歌《平安夜》</a></li>
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11638837.htm">离奇死亡的重庆书记任学锋 被指涉多起冤案</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11640298.htm">中小银行挤兑潮频现 中共金融委急商对策</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639897.htm">【新闻看点】美重申停火底线 北京大动作示好</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639300.htm">继王思聪后 潘石屹儿子潘瑞清空微博</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/11/n11582046.htm">唐代使者漂流到巨人国</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625562.htm">【才子佳人】借汉人身份嫁乾隆曾孙的满清才女</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/4/21/n4416242.htm">糟糠之妻不下堂 古人视婚姻为人伦之本</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612042.htm">【才子佳人】梁祝的故事 我们读懂了吗？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638183.htm">杜汶泽舌战陈百祥后呼吁：集中精神做对的事</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635898.htm">章子怡试镜日本艺伎 曾因仅说四个字惨遭淘汰</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639534.htm">林志玲17日婚宴 林依晨收喜帖遗憾无法赴宴</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635562.htm">晒头发遮眼加口罩生活照 容祖儿疑遭大陆封杀</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635746.htm">仰望45度唱姿缘何练成 费玉清揭歌手生涯秘辛</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/4/16/n10309074.htm">【名句故事】大树将军</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11640231.htm">【新闻看点】四中强化党国 虚化人民 改革已死</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639377.htm">认清中共残暴 港人对法轮功的认识愈加正面</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636669.htm">王健林独子王思聪列入被执行人名单 登上热搜</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636278.htm">【翻墙必看】分析：四中全会公报或泄大秘密</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638219.htm">林郑被习韩摆上台 香港步入黑暗时期</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741624.htm">【翻墙必看】北大教授：七常委先公示财产</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741848.htm">网传赖小民将百名情妇安置同一小区</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11742305.htm">网文：央行钱印出来了 借钱的人没了</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741515.htm">英缉获大量中国假货 含巴宝莉和香奈儿品牌</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11724979.htm">“一元复始”古人为何贺冬至不贺夏至？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11729266.htm">2020年 这18个自由职业年薪过10万</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740044.htm">美军罕见公开生擒朝鲜领导人的演习画面</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/11/17/n11661844.htm">【思想领袖】哪些因素威胁美国文化与繁荣（上）</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739348.htm">【拍案惊奇】《愿荣光归香港》全新台语歌词</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738702.htm">哈孝远补办婚宴热闹 迎娶空姐美娇娘</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11739135.htm">高圆圆冬至晒照问吃啥 贾静雯晒满桌美食回应</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739406.htm">岚摘公信榜年销量冠军 TWICE与BTS入Top5</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740019.htm">崔智友对怀孕心怀感恩 明年5月为人母</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738990.htm">指如今演艺工作式微 周润发有意退休后转行</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mprjd2205/djy/blob/master/gb/19/5/22/n11273861.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/19/5/22/n11273861.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
