--- a/gb/19/9/21/n11536332.md
+++ b/gb/19/9/21/n11536332.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5773.md#1">贪腐淫乱 | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/mprjd2205/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mprjd2205/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
+<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dueiwa2503/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rdngdq252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dueiwa2503/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dueiwa2503/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dueiwa2503/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>跨国企业家景仰神韵艺术总监：神写的音乐</h2>
 <img src="http://i.epochtimes.com/assets/uploads/2019/09/1909201152351886-600x400.jpg" />
 <h6>2019年9月20日晚间，跨国企业家吴庭光观赏神韵交响乐团在屏东演艺厅的演出。（郑顺利／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年09月21日讯】（大纪元台湾屏东记者站报导）“这是神写的<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md">音乐</a>！”澳洲雪梨大学建筑学院前院长吴庭光，聆赏2019年9月20日<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>交响乐团在<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E5%B1%8F%E4%B8%9C%E6%BC%94%E8%89%BA%E5%8E%85.md">屏东演艺厅</a>进行全台巡回的第二场演出后，对艺术总监创作的乐曲，发出由衷赞叹，他说：“这是神韵！神的韵律！ D.F.先生等于是现代的神！”</p>
-<p>吴庭光是台湾香蕉大王吴振瑞次子，也是著名的跨国企业家，拥有美国麻省理工学院核子物理及澳洲雪梨大学建筑科学双博士学位，他专门设计<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md">音乐</a>厅。曾参与雪梨歌剧院设计建设工程。</p>
-<h2>创作神曲 <a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>艺术总监D.F.先生令人景仰</h2>
+	<p>【大纪元2019年09月21日讯】（大纪元台湾屏东记者站报导）“这是神写的<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md">音乐</a>！”澳洲雪梨大学建筑学院前院长吴庭光，聆赏2019年9月20日<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>交响乐团在<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E5%B1%8F%E4%B8%9C%E6%BC%94%E8%89%BA%E5%8E%85.md">屏东演艺厅</a>进行全台巡回的第二场演出后，对艺术总监创作的乐曲，发出由衷赞叹，他说：“这是神韵！神的韵律！ D.F.先生等于是现代的神！”</p>
+<p>吴庭光是台湾香蕉大王吴振瑞次子，也是著名的跨国企业家，拥有美国麻省理工学院核子物理及澳洲雪梨大学建筑科学双博士学位，他专门设计<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md">音乐</a>厅。曾参与雪梨歌剧院设计建设工程。</p>
+<h2>创作神曲 <a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>艺术总监D.F.先生令人景仰</h2>
 <figure id="attachment_11536335" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/09/190920204920100440.jpg"><img class="size-large wp-image-11536335" title="2019年9月20日晚 神韵交响乐团在屏东县演艺厅演出 台湾第二场演出" src="http://i.epochtimes.com/assets/uploads/2019/09/190920204920100440-600x400.jpg" alt="2019年9月20日晚 神韵交响乐团在屏东县演艺厅演出 台湾第二场演出" width="600" b="400" /></a><figcaption class="wp-caption-text">2019年9月20日晚间，跨国企业家吴庭光（穿西装者）赞助屏东高中管乐社师生50张票，观赏神韵交响乐团的演出，会后他与校长陈国祥（穿衬衫者）与被赞助学生合影。（郑顺利／大纪元）</figcaption></figure>
 <p>吴庭光之前观赏过神韵艺术团的演出，首次聆赏神韵交响乐团的他，为了赶赴这场音乐盛会，专程远从美国赶回屏东。他并赞助屏东高中管乐社师生50张票以及15张票给屏东主流乡亲，让他们共享神韵交响乐的美好。</p>
 <p>他表示整场音乐会的感觉都非常好，从聆听过程到走出音乐厅，一直有“飘飘欲仙”的感觉，“这种感觉不能够言传。真的很接近神的声音，接近神的语言。”</p>
 <p>整场的音乐会让吴庭光非常感动，尤其最后一首压轴曲《康熙大帝》，磅礴的旋律，更让他抚掌称快，感动不已。他说：“《康熙大帝》曲风，壮丽之外，还很和谐。我觉得那个合弦是歌颂神，可以说就是神曲了，那个气势真的了不得！”</p>
 <p>吴庭光感动艺术总监D.F.先生的巧妙构思，将康熙大帝一生的丰功伟业，透过悠扬起伏的旋律，犹如画卷一般呈现出来。在他耳畔回荡的，感觉像是对神的礼赞，他表示，“虽然在天下（在人间）是以皇帝皇室去象征，其实比那更高超，就是神，等于是真正的歌颂，是很美的歌颂神、赞美神的（乐章），就是神韵，神的韵律。”</p>
 <p>他因此对艺术总监油然升起无限景仰之意，吴庭光说：“我知道很多乐曲是D.F.先生创作的，他等于是现代的神！我非常非常敬佩他。”怀抱赤子般的孺慕情怀，吴庭光忍不住表达心中一份向往，希望“有机会能景仰他”。</p>
-<p>吴庭光同时盛赞整个乐团的艺术家们精湛技巧，“那些音乐家，大提琴还有低音提琴，小提琴，甚至那些鼓，都非常好，<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%B9%90%E5%99%A8.md">中国乐器</a>也演奏的非常非常好。”“神韵，就是神韵，神的韵律非常非常成功，真的是名不虚传。”</p>
+<p>吴庭光同时盛赞整个乐团的艺术家们精湛技巧，“那些音乐家，大提琴还有低音提琴，小提琴，甚至那些鼓，都非常好，<a href="https://github.com/dueiwa2503/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%B9%90%E5%99%A8.md">中国乐器</a>也演奏的非常非常好。”“神韵，就是神韵，神的韵律非常非常成功，真的是名不虚传。”</p>
 <p>吴庭光也推崇两位指挥家的功力，尤其对新加入的迪密萃．鲁苏的风趣肢体语言，印象深刻，认为严肃之外，添加的风趣，对带动全场气氛有加分效果。</p>
 <p>对整场音乐会，吴庭光反复使用“非常非常”的语词来表达内心的感受，“音律非常非常谐和，非常动人，非常令人感动，我觉得非常舒畅，非常的飘飘欲仙，而且会（生出）一种崇敬的感觉。”</p>
 <p>吴庭光知道神韵艺术家都是重视心性涵养的法轮大法的修炼者，他说他接触过的法轮功学员都很善良，“人最美的时候，就是他本身心也美。”所以他能感受从神韵音乐散发出来的正能量。他说：“听了神韵会让人更加健康，更有正面的影响力。”</p>
@@ -29,41 +29,39 @@
 <hr>
 
 #### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/19/9/21/n11536332.htm"></a>
+> 原文：<a href="http://www.epochtimes.com/gb\19\9\21\n11536332.htm">跨国企业家景仰神韵艺术总监：神写的音乐</a>
 
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/8/19/n11462379.htm">蔡琴翻唱《告白气球》 周董：哎呦蔡姐不错哦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11391565.htm">昆凌时尚爱运动 成知名品牌最新全球代言人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/20/n11336607.htm">周董夫妇打篮球秀恩爱 昆凌运球跑位三投三中</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/15/n11260150.htm">昆凌坎城影展亮相 周杰伦扮粉丝围观</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/2/n11229766.htm">为拍戏常带儿女倒时差 昆凌：我是个自私的妈</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/11/n11038441.htm">现身周杰伦演唱会 章子怡晒与昆凌亲密合影</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/16/n10980015.htm">周杰伦晒妈妈时尚照 昆凌一句话见证婆媳感情</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/7/n10958529.htm">昆凌登时尚杂志封面 个性爱恶作剧</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/7/27/n10596149.htm">录节目向周董邀歌？李易峰：怕被拒绝很尴尬</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/3/13/n10215306.htm">昆凌分享周董贴心小举动 曝不让儿女露脸原因</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11742106.htm">NORAD超级任务 追踪圣诞老人及朝鲜礼物</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741610.htm">警方指平安夜尖沙咀一带不封路 旅发局取消跨年烟花倒数</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741086.htm">圣诞节前一天 美各商家营业时间一览</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11686220.htm">全球的美味圣诞 各国圣诞大餐吃什么？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/1/7/n10958799.htm">【医案】平安夜的钟声</a></li>
+> <li><a href="http://www.epochtimes.com/gb/18/12/25/n10930987.htm">玉清心：今年唱《平安夜》为何格外动容</a></li>
+> <li><a href="http://www.epochtimes.com/gb/18/12/24/n10929031.htm">觅真：“平安夜”话平安</a></li>
+> <li><a href="http://www.epochtimes.com/gb/18/12/18/n10918471.htm">从老鼠到战壕 神奇的圣诞歌《平安夜》</a></li>
 
 #### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11638837.htm">离奇死亡的重庆书记任学锋 被指涉多起冤案</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11640298.htm">中小银行挤兑潮频现 中共金融委急商对策</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639897.htm">【新闻看点】美重申停火底线 北京大动作示好</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639300.htm">继王思聪后 潘石屹儿子潘瑞清空微博</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/11/n11582046.htm">唐代使者漂流到巨人国</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625562.htm">【才子佳人】借汉人身份嫁乾隆曾孙的满清才女</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/4/21/n4416242.htm">糟糠之妻不下堂 古人视婚姻为人伦之本</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612042.htm">【才子佳人】梁祝的故事 我们读懂了吗？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638183.htm">杜汶泽舌战陈百祥后呼吁：集中精神做对的事</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635898.htm">章子怡试镜日本艺伎 曾因仅说四个字惨遭淘汰</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639534.htm">林志玲17日婚宴 林依晨收喜帖遗憾无法赴宴</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635562.htm">晒头发遮眼加口罩生活照 容祖儿疑遭大陆封杀</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635746.htm">仰望45度唱姿缘何练成 费玉清揭歌手生涯秘辛</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/4/16/n10309074.htm">【名句故事】大树将军</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11640231.htm">【新闻看点】四中强化党国 虚化人民 改革已死</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639377.htm">认清中共残暴 港人对法轮功的认识愈加正面</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636669.htm">王健林独子王思聪列入被执行人名单 登上热搜</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636278.htm">【翻墙必看】分析：四中全会公报或泄大秘密</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638219.htm">林郑被习韩摆上台 香港步入黑暗时期</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741624.htm">【翻墙必看】北大教授：七常委先公示财产</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741848.htm">网传赖小民将百名情妇安置同一小区</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11742305.htm">网文：央行钱印出来了 借钱的人没了</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741515.htm">英缉获大量中国假货 含巴宝莉和香奈儿品牌</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11724979.htm">“一元复始”古人为何贺冬至不贺夏至？</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11729266.htm">2020年 这18个自由职业年薪过10万</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740044.htm">美军罕见公开生擒朝鲜领导人的演习画面</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/11/17/n11661844.htm">【思想领袖】哪些因素威胁美国文化与繁荣（上）</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739348.htm">【拍案惊奇】《愿荣光归香港》全新台语歌词</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738702.htm">哈孝远补办婚宴热闹 迎娶空姐美娇娘</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11739135.htm">高圆圆冬至晒照问吃啥 贾静雯晒满桌美食回应</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739406.htm">岚摘公信榜年销量冠军 TWICE与BTS入Top5</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740019.htm">崔智友对怀孕心怀感恩 明年5月为人母</a></li>
+> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738990.htm">指如今演艺工作式微 周润发有意退休后转行</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mprjd2205/djy/blob/master/gb/19/9/21/n11536332.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/19/9/21/n11536332.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dueiwa2503/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dueiwa2503/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
